--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "@angular/router": "~13.0.0",
     "bootstrap": "^5.1.3",
     "ngx-bootstrap": "^6.2.0",
+    "ngx-scrollreveal": "^3.0.0",
     "rxjs": "~7.4.0",
+    "scrollreveal": "^4.0.9",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
